--- a/config/locales/devise.ja.yml
+++ b/config/locales/devise.ja.yml
@@ -16,7 +16,7 @@ ja:
       not_found_in_database: "メールアドレスまたはパスワードが無効です。"
       timeout: "一定時間が経過したため、再度ログインが必要です"
       unauthenticated: "続けるには、ログインまたは登録（サインアップ）が必要です。"
-      unconfirmed: "続ける前に、アカウントの確認をお願いします。"
+      unconfirmed: "続ける前に、アカウントの認証をお願いします。"
     mailer:
       confirmation_instructions:
         subject: "アカウントの登録方法"
